--- a/Web Scraper/Funding_Scraper.ipynb
+++ b/Web Scraper/Funding_Scraper.ipynb
@@ -1,6 +1,23 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### What are we scraping:\n",
+    "  - What fields do we need\n",
+    "    - Enrollment\n",
+    "    - Total Funding\n",
+    "    - Federal/State Funding\n",
+    "    - City Funding\n",
+    "    - Per Pupil Spending\n",
+    "  - 2015 - 2016:\n",
+    "    - https://www.nycenet.edu/offices/d_chanc_oper/budget/exp01/y2015_2016/function.asp?\n",
+    "  - 2016 - 2017:\n",
+    "    - https://www.nycenet.edu/offices/d_chanc_oper/budget/dbor/sber/FY2017/FY2017_Default.aspx"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -22,27 +39,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## What are we scraping:\n",
-    "  - What fields do we need\n",
-    "    - Enrollment\n",
-    "    - Total Funding\n",
-    "    - Federal/State Funding\n",
-    "    - City Funding\n",
-    "  - 2015 - 2016:\n",
-    "  - 2016 - 2017:\n",
-    "    - https://www.nycenet.edu/offices/d_chanc_oper/budget/dbor/sber/FY2017/FY2017_Default.aspx\n",
-    "    - Funding Source\n",
-    "\n",
-    "2016-2017 to 2017 - 2018:\n",
-    "https://www.nycenet.edu/offices/d_chanc_oper/budget/dbor/sber/FY2017/FY2017_Default.aspx\n",
-    "https://www.nycenet.edu/offices/d_chanc_oper/budget/dbor/sber/FY2017/FY2017_Default.aspx\n",
-    "https://www.nycenet.edu/offices/d_chanc_oper/budget/dbor/sber/FY2018/FY2018_Default.aspx"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -54,26 +50,6 @@
     "#Set the path for the webdriver and website\n",
     "driver = webdriver.Chrome(PATH)\n",
     "driver.get(\"https://www.nycenet.edu/offices/d_chanc_oper/budget/dbor/sber/FY2017/FY2017_Default.aspx\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "  - What fields do we need\n",
-    "    - Enrollment\n",
-    "    - Total Funding\n",
-    "    - Federal/State Funding\n",
-    "    - City Funding\n",
-    "  - 2015 - 2016:\n",
-    "  - 2016 - 2017:\n",
-    "    - https://www.nycenet.edu/offices/d_chanc_oper/budget/dbor/sber/FY2017/FY2017_Default.aspx\n",
-    "    - Funding Source\n",
-    "\n",
-    "2016-2017 to 2017 - 2018:\n",
-    "https://www.nycenet.edu/offices/d_chanc_oper/budget/dbor/sber/FY2017/FY2017_Default.aspx\n",
-    "https://www.nycenet.edu/offices/d_chanc_oper/budget/dbor/sber/FY2017/FY2017_Default.aspx\n",
-    "https://www.nycenet.edu/offices/d_chanc_oper/budget/dbor/sber/FY2018/FY2018_Default.aspx"
    ]
   },
   {
@@ -151,35 +127,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Message: stale element reference: element is not attached to the page document\n",
-      "  (Session info: chrome=108.0.5359.124)\n",
-      " Error: M018 Not Found!\n",
-      "expected string or bytes-like object Error: M052 Not Found!\n"
-     ]
-    },
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-18-3f0fc61d1c3e>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     24\u001b[0m     \u001b[0mtime\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msleep\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m0.5\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     25\u001b[0m     \u001b[0mtextbox\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mclear\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 26\u001b[1;33m     \u001b[0mtime\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msleep\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m0.5\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     27\u001b[0m     \u001b[0mtextbox\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msend_keys\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mschool\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     28\u001b[0m     \u001b[0mdriver\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfind_element_by_id\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'ContentPlaceHolder1_btn_Search'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mclick\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
-     ]
-    }
-   ],
+   "outputs": [],
+   "source": [
+    "#Creating the 2015-2016 Output DataFrame:\n",
+    "output = pd.DataFrame()\n",
+    "\n",
+    "output[\"district\"] = district_array\n",
+    "output[\"dbn\"] = dbn_array\n",
+    "output[\"total enrollment\"] = total_enrollment_array\n",
+    "output[\"total funding\"] = total_funding_array\n",
+    "output[\"total federal funding\"] = total_federal_funding_array\n",
+    "output[\"total city/state\"] = total_state_funding_array\n",
+    "output[\"per pupil funding\"] = school_per_pupil_funding_array\n",
+    "\n",
+    "output.head()\n",
+    "\n",
+    "#Outputting the .csv\n",
+    "output.to_csv('data/2015-2016 Middle School Funding Data.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "#School Year 2016-2017\n",
     "mainURL = \"https://www.nycenet.edu/offices/d_chanc_oper/budget/dbor/sber/FY2017/FY2017_Default.aspx\"\n",
     "driver.get(mainURL)\n",
+    "\n",
+    "funding_source = driver.find_element_by_xpath('//*[@id=\"ContentPlaceHolder1_Btn_R5\"]').click()\n",
     "\n",
     "#Importing the School Directory\n",
     "dir = pd.read_csv('data/directory.csv')\n",
@@ -198,11 +177,11 @@
     "\n",
     "for school in dir_list:\n",
     "  #Selecting the school from the dropdown menu \n",
+    "  \n",
     "  try:\n",
     "    textbox = driver.find_element_by_id('ContentPlaceHolder1_Input_School')\n",
-    "    time.sleep(0.5)\n",
     "    textbox.clear()\n",
-    "    time.sleep(0.5)\n",
+    "    textbox = driver.find_element_by_id('ContentPlaceHolder1_Input_School')\n",
     "    textbox.send_keys(school)\n",
     "    driver.find_element_by_id('ContentPlaceHolder1_btn_Search').click()\n",
     "\n",
@@ -226,7 +205,7 @@
     "    total_enrollment_array.append(school_total_enrollment)\n",
     "\n",
     "    #School District\n",
-    "    school_district = int(re.findall(r'\\d+', driver.find_element_by_xpath('/html/body/form/div[3]/div[4]/span/div[11]'))[0])\n",
+    "    school_district = int(re.findall(r'\\d+', driver.find_element_by_xpath('/html/body/form/div[3]/div[4]/span/div[4]').text)[0])\n",
     "    district_array.append(school_district)\n",
     "\n",
     "    #School DBN:\n",
@@ -237,12 +216,6 @@
     "\n",
     "    #Rounding to 3 decimals and adding it to the array\n",
     "    school_per_pupil_funding_array.append(school_per_pupil_funding)\n",
-    "\n",
-    "    print(school_total_funding)\n",
-    "    print(school_citystate_funding)\n",
-    "    print(school_district)\n",
-    "    print(school_federal_funding)\n",
-    "    print(school_total_enrollment)\n",
     "\n",
     "  except Exception as e:\n",
     "    print(e, \"Error: \"+ school +\" Not Found!\")"
@@ -265,17 +238,10 @@
     "output[\"total city/state\"] = total_state_funding_array\n",
     "output[\"per pupil funding\"] = school_per_pupil_funding_array\n",
     "\n",
-    "output.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "output.head()\n",
+    "\n",
     "#Outputting the .csv\n",
-    "output.to_csv('data/2015-2016 Middle School Funding Data.csv')"
+    "output.to_csv('data/2016-2017 Middle School Funding Data.csv')"
    ]
   }
  ],
