Update Attendance & State Math Test.ipynb

--- a/Attendance & State Math Test.ipynb
+++ b/Attendance & State Math Test.ipynb
@@ -1347,8 +1347,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
-   "id": "485a7a41",
+   "execution_count": 95,
+   "id": "d3ce51b3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1357,13 +1357,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 96,
    "id": "121b6c1a",
    "metadata": {},
    "outputs": [],
    "source": [
     "attvsresults = att_results.dropna(axis = 0)\n",
-    "\n",
+    "attvsresults = attvsresults[(attvsresults.Grade == '8')]\n",
     "\n",
     "#attvsresults['% Attendance'] = attvsresults[(attvsresults['% Attendance'] != 's')]\n",
     "#attvsresults['% Attendance'] = attvsresults['% Attendance'].astype(int)\n",
@@ -1382,7 +1382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 97,
    "id": "7e2e4158",
    "metadata": {},
    "outputs": [
@@ -1429,109 +1429,109 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>01M015</td>\n",
-       "      <td>5</td>\n",
-       "      <td>16</td>\n",
-       "      <td>95.0</td>\n",
-       "      <td>P.S. 015 ROBERTO CLEMENTE</td>\n",
+       "      <th>1</th>\n",
+       "      <td>01M034</td>\n",
+       "      <td>8</td>\n",
+       "      <td>15</td>\n",
+       "      <td>92.0</td>\n",
+       "      <td>P.S. 034 FRANKLIN D. ROOSEVELT</td>\n",
        "      <td>All Students</td>\n",
-       "      <td>16.0</td>\n",
-       "      <td>283</td>\n",
-       "      <td>7</td>\n",
+       "      <td>59.0</td>\n",
+       "      <td>298</td>\n",
+       "      <td>21</td>\n",
+       "      <td>35.6</td>\n",
+       "      <td>24</td>\n",
+       "      <td>40.7</td>\n",
+       "      <td>9</td>\n",
+       "      <td>15.3</td>\n",
+       "      <td>5</td>\n",
+       "      <td>8.5</td>\n",
+       "      <td>14</td>\n",
+       "      <td>23.7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>01M034</td>\n",
+       "      <td>8</td>\n",
+       "      <td>16</td>\n",
+       "      <td>91.5</td>\n",
+       "      <td>P.S. 034 FRANKLIN D. ROOSEVELT</td>\n",
+       "      <td>All Students</td>\n",
+       "      <td>48.0</td>\n",
+       "      <td>287</td>\n",
+       "      <td>21</td>\n",
        "      <td>43.8</td>\n",
-       "      <td>7</td>\n",
-       "      <td>43.8</td>\n",
-       "      <td>2</td>\n",
-       "      <td>12.5</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2</td>\n",
-       "      <td>12.5</td>\n",
+       "      <td>18</td>\n",
+       "      <td>37.5</td>\n",
+       "      <td>8</td>\n",
+       "      <td>16.7</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2.1</td>\n",
+       "      <td>9</td>\n",
+       "      <td>18.8</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>01M015</td>\n",
-       "      <td>5</td>\n",
-       "      <td>17</td>\n",
-       "      <td>95.9</td>\n",
-       "      <td>P.S. 015 ROBERTO CLEMENTE</td>\n",
-       "      <td>All Students</td>\n",
-       "      <td>17.0</td>\n",
-       "      <td>322</td>\n",
-       "      <td>2</td>\n",
-       "      <td>11.8</td>\n",
-       "      <td>5</td>\n",
-       "      <td>29.4</td>\n",
+       "      <td>01M034</td>\n",
        "      <td>8</td>\n",
-       "      <td>47.1</td>\n",
+       "      <td>17</td>\n",
+       "      <td>90.4</td>\n",
+       "      <td>P.S. 034 FRANKLIN D. ROOSEVELT</td>\n",
+       "      <td>All Students</td>\n",
+       "      <td>50.0</td>\n",
+       "      <td>289</td>\n",
+       "      <td>18</td>\n",
+       "      <td>36</td>\n",
+       "      <td>24</td>\n",
+       "      <td>48</td>\n",
+       "      <td>7</td>\n",
+       "      <td>14</td>\n",
+       "      <td>1</td>\n",
        "      <td>2</td>\n",
-       "      <td>11.8</td>\n",
-       "      <td>10</td>\n",
-       "      <td>58.8</td>\n",
+       "      <td>8</td>\n",
+       "      <td>16</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>01M015</td>\n",
-       "      <td>5</td>\n",
+       "      <td>01M034</td>\n",
+       "      <td>8</td>\n",
        "      <td>18</td>\n",
-       "      <td>94.1</td>\n",
-       "      <td>P.S. 015 ROBERTO CLEMENTE</td>\n",
+       "      <td>91.2</td>\n",
+       "      <td>P.S. 034 FRANKLIN D. ROOSEVELT</td>\n",
        "      <td>All Students</td>\n",
-       "      <td>20.0</td>\n",
-       "      <td>602</td>\n",
+       "      <td>54.0</td>\n",
+       "      <td>592</td>\n",
+       "      <td>30</td>\n",
+       "      <td>55.6</td>\n",
+       "      <td>17</td>\n",
+       "      <td>31.5</td>\n",
        "      <td>4</td>\n",
-       "      <td>20</td>\n",
-       "      <td>9</td>\n",
-       "      <td>45</td>\n",
-       "      <td>5</td>\n",
-       "      <td>25</td>\n",
-       "      <td>2</td>\n",
-       "      <td>10</td>\n",
+       "      <td>7.4</td>\n",
+       "      <td>3</td>\n",
+       "      <td>5.6</td>\n",
        "      <td>7</td>\n",
-       "      <td>35</td>\n",
+       "      <td>13</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
-       "      <td>01M015</td>\n",
-       "      <td>5</td>\n",
-       "      <td>19</td>\n",
-       "      <td>92.8</td>\n",
-       "      <td>P.S. 015 ROBERTO CLEMENTE</td>\n",
-       "      <td>All Students</td>\n",
-       "      <td>26.0</td>\n",
-       "      <td>602</td>\n",
-       "      <td>5</td>\n",
-       "      <td>19.2</td>\n",
+       "      <td>01M034</td>\n",
        "      <td>8</td>\n",
-       "      <td>30.8</td>\n",
-       "      <td>7</td>\n",
-       "      <td>26.9</td>\n",
-       "      <td>6</td>\n",
-       "      <td>23.1</td>\n",
-       "      <td>13</td>\n",
-       "      <td>50</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>01M019</td>\n",
-       "      <td>5</td>\n",
-       "      <td>16</td>\n",
-       "      <td>90.9</td>\n",
-       "      <td>P.S. 019 ASHER LEVY</td>\n",
+       "      <td>19</td>\n",
+       "      <td>89.4</td>\n",
+       "      <td>P.S. 034 FRANKLIN D. ROOSEVELT</td>\n",
        "      <td>All Students</td>\n",
-       "      <td>32.0</td>\n",
-       "      <td>317</td>\n",
-       "      <td>5</td>\n",
-       "      <td>15.6</td>\n",
-       "      <td>12</td>\n",
-       "      <td>37.5</td>\n",
+       "      <td>29.0</td>\n",
+       "      <td>593</td>\n",
+       "      <td>13</td>\n",
+       "      <td>44.8</td>\n",
        "      <td>11</td>\n",
-       "      <td>34.4</td>\n",
-       "      <td>4</td>\n",
-       "      <td>12.5</td>\n",
-       "      <td>15</td>\n",
-       "      <td>46.9</td>\n",
+       "      <td>37.9</td>\n",
+       "      <td>3</td>\n",
+       "      <td>10.3</td>\n",
+       "      <td>2</td>\n",
+       "      <td>6.9</td>\n",
+       "      <td>5</td>\n",
+       "      <td>17.2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -1555,7 +1555,7 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>188408</th>\n",
+       "      <th>28773</th>\n",
        "      <td>32K562</td>\n",
        "      <td>8</td>\n",
        "      <td>16</td>\n",
@@ -1576,7 +1576,7 @@
        "      <td>3.3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>188409</th>\n",
+       "      <th>28774</th>\n",
        "      <td>32K562</td>\n",
        "      <td>8</td>\n",
        "      <td>16</td>\n",
@@ -1597,7 +1597,7 @@
        "      <td>3.3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>188410</th>\n",
+       "      <th>28775</th>\n",
        "      <td>32K562</td>\n",
        "      <td>8</td>\n",
        "      <td>17</td>\n",
@@ -1618,7 +1618,7 @@
        "      <td>4.5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>188414</th>\n",
+       "      <th>28778</th>\n",
        "      <td>32K562</td>\n",
        "      <td>8</td>\n",
        "      <td>19</td>\n",
@@ -1639,7 +1639,7 @@
        "      <td>19.4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>188415</th>\n",
+       "      <th>28779</th>\n",
        "      <td>32K562</td>\n",
        "      <td>8</td>\n",
        "      <td>19</td>\n",
@@ -1661,79 +1661,79 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>93299 rows × 18 columns</p>\n",
+       "<p>20175 rows × 18 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "           DBN Grade Year  Attendance  \\\n",
-       "2       01M015     5   16        95.0   \n",
-       "3       01M015     5   17        95.9   \n",
-       "4       01M015     5   18        94.1   \n",
-       "5       01M015     5   19        92.8   \n",
-       "9       01M019     5   16        90.9   \n",
-       "...        ...   ...  ...         ...   \n",
-       "188408  32K562     8   16        97.1   \n",
-       "188409  32K562     8   16        92.5   \n",
-       "188410  32K562     8   17        97.8   \n",
-       "188414  32K562     8   19        96.5   \n",
-       "188415  32K562     8   19        94.5   \n",
+       "          DBN Grade Year  Attendance  \\\n",
+       "1      01M034     8   15        92.0   \n",
+       "2      01M034     8   16        91.5   \n",
+       "3      01M034     8   17        90.4   \n",
+       "4      01M034     8   18        91.2   \n",
+       "5      01M034     8   19        89.4   \n",
+       "...       ...   ...  ...         ...   \n",
+       "28773  32K562     8   16        97.1   \n",
+       "28774  32K562     8   16        92.5   \n",
+       "28775  32K562     8   17        97.8   \n",
+       "28778  32K562     8   19        96.5   \n",
+       "28779  32K562     8   19        94.5   \n",
        "\n",
-       "                                          School_Name      Category  \\\n",
-       "2                           P.S. 015 ROBERTO CLEMENTE  All Students   \n",
-       "3                           P.S. 015 ROBERTO CLEMENTE  All Students   \n",
-       "4                           P.S. 015 ROBERTO CLEMENTE  All Students   \n",
-       "5                           P.S. 015 ROBERTO CLEMENTE  All Students   \n",
-       "9                                 P.S. 019 ASHER LEVY  All Students   \n",
-       "...                                               ...           ...   \n",
-       "188408  EVERGREEN MIDDLE SCHOOL FOR URBAN EXPLORATION  All Students   \n",
-       "188409  EVERGREEN MIDDLE SCHOOL FOR URBAN EXPLORATION  All Students   \n",
-       "188410  EVERGREEN MIDDLE SCHOOL FOR URBAN EXPLORATION  All Students   \n",
-       "188414  EVERGREEN MIDDLE SCHOOL FOR URBAN EXPLORATION  All Students   \n",
-       "188415  EVERGREEN MIDDLE SCHOOL FOR URBAN EXPLORATION  All Students   \n",
+       "                                         School_Name      Category  \\\n",
+       "1                     P.S. 034 FRANKLIN D. ROOSEVELT  All Students   \n",
+       "2                     P.S. 034 FRANKLIN D. ROOSEVELT  All Students   \n",
+       "3                     P.S. 034 FRANKLIN D. ROOSEVELT  All Students   \n",
+       "4                     P.S. 034 FRANKLIN D. ROOSEVELT  All Students   \n",
+       "5                     P.S. 034 FRANKLIN D. ROOSEVELT  All Students   \n",
+       "...                                              ...           ...   \n",
+       "28773  EVERGREEN MIDDLE SCHOOL FOR URBAN EXPLORATION  All Students   \n",
+       "28774  EVERGREEN MIDDLE SCHOOL FOR URBAN EXPLORATION  All Students   \n",
+       "28775  EVERGREEN MIDDLE SCHOOL FOR URBAN EXPLORATION  All Students   \n",
+       "28778  EVERGREEN MIDDLE SCHOOL FOR URBAN EXPLORATION  All Students   \n",
+       "28779  EVERGREEN MIDDLE SCHOOL FOR URBAN EXPLORATION  All Students   \n",
        "\n",
-       "        Number_Tested Mean_Scale_Score Number_Level_1 Percentage_Level_1  \\\n",
-       "2                16.0              283              7               43.8   \n",
-       "3                17.0              322              2               11.8   \n",
-       "4                20.0              602              4                 20   \n",
-       "5                26.0              602              5               19.2   \n",
-       "9                32.0              317              5               15.6   \n",
-       "...               ...              ...            ...                ...   \n",
-       "188408           91.0              274             55               60.4   \n",
-       "188409           91.0              274             55               60.4   \n",
-       "188410           88.0              268             59                 67   \n",
-       "188414          108.0              595             53               49.1   \n",
-       "188415          108.0              595             53               49.1   \n",
+       "       Number_Tested Mean_Scale_Score Number_Level_1 Percentage_Level_1  \\\n",
+       "1               59.0              298             21               35.6   \n",
+       "2               48.0              287             21               43.8   \n",
+       "3               50.0              289             18                 36   \n",
+       "4               54.0              592             30               55.6   \n",
+       "5               29.0              593             13               44.8   \n",
+       "...              ...              ...            ...                ...   \n",
+       "28773           91.0              274             55               60.4   \n",
+       "28774           91.0              274             55               60.4   \n",
+       "28775           88.0              268             59                 67   \n",
+       "28778          108.0              595             53               49.1   \n",
+       "28779          108.0              595             53               49.1   \n",
        "\n",
-       "       Number_Level_2 Percentage_Level_2 Number_Level_3 Percentage_Level_3  \\\n",
-       "2                   7               43.8              2               12.5   \n",
-       "3                   5               29.4              8               47.1   \n",
-       "4                   9                 45              5                 25   \n",
-       "5                   8               30.8              7               26.9   \n",
-       "9                  12               37.5             11               34.4   \n",
-       "...               ...                ...            ...                ...   \n",
-       "188408             33               36.3              3                3.3   \n",
-       "188409             33               36.3              3                3.3   \n",
-       "188410             25               28.4              3                3.4   \n",
-       "188414             34               31.5             16               14.8   \n",
-       "188415             34               31.5             16               14.8   \n",
+       "      Number_Level_2 Percentage_Level_2 Number_Level_3 Percentage_Level_3  \\\n",
+       "1                 24               40.7              9               15.3   \n",
+       "2                 18               37.5              8               16.7   \n",
+       "3                 24                 48              7                 14   \n",
+       "4                 17               31.5              4                7.4   \n",
+       "5                 11               37.9              3               10.3   \n",
+       "...              ...                ...            ...                ...   \n",
+       "28773             33               36.3              3                3.3   \n",
+       "28774             33               36.3              3                3.3   \n",
+       "28775             25               28.4              3                3.4   \n",
+       "28778             34               31.5             16               14.8   \n",
+       "28779             34               31.5             16               14.8   \n",
        "\n",
-       "       Number_Level_4 Percentage_Level_4 Number_Level_3+4 Percentage_Level_3+4  \n",
-       "2                   0                  0                2                 12.5  \n",
-       "3                   2               11.8               10                 58.8  \n",
-       "4                   2                 10                7                   35  \n",
-       "5                   6               23.1               13                   50  \n",
-       "9                   4               12.5               15                 46.9  \n",
-       "...               ...                ...              ...                  ...  \n",
-       "188408              0                  0                3                  3.3  \n",
-       "188409              0                  0                3                  3.3  \n",
-       "188410              1                1.1                4                  4.5  \n",
-       "188414              5                4.6               21                 19.4  \n",
-       "188415              5                4.6               21                 19.4  \n",
+       "      Number_Level_4 Percentage_Level_4 Number_Level_3+4 Percentage_Level_3+4  \n",
+       "1                  5                8.5               14                 23.7  \n",
+       "2                  1                2.1                9                 18.8  \n",
+       "3                  1                  2                8                   16  \n",
+       "4                  3                5.6                7                   13  \n",
+       "5                  2                6.9                5                 17.2  \n",
+       "...              ...                ...              ...                  ...  \n",
+       "28773              0                  0                3                  3.3  \n",
+       "28774              0                  0                3                  3.3  \n",
+       "28775              1                1.1                4                  4.5  \n",
+       "28778              5                4.6               21                 19.4  \n",
+       "28779              5                4.6               21                 19.4  \n",
        "\n",
-       "[93299 rows x 18 columns]"
+       "[20175 rows x 18 columns]"
       ]
      },
-     "execution_count": 93,
+     "execution_count": 97,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1744,7 +1744,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 98,
    "id": "295fd472",
    "metadata": {},
    "outputs": [],
@@ -1768,9 +1768,7 @@
    "id": "b2acfe87",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "\n"
-   ]
+   "source": []
   }
  ],
  "metadata": {
